--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,47 +64,44 @@
                     android:layout_height="0dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="28dp"
-                    app:layout_constraintHeight_percent="0.13"
+                    android:layout_marginTop="25dp"
+                    app:layout_constraintHeight_percent="0.11"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/delivery"
-                    app:layout_constraintWidth_percent="0.11"
+                    app:layout_constraintWidth_percent="0.09"
                     app:srcCompat="@drawable/path_1395" />
 
                 <ImageView
                     android:id="@+id/delivery"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:layout_marginTop="40dp"
-                    app:layout_constraintHeight_percent="0.16"
+                    android:layout_marginTop="56dp"
+                    app:layout_constraintHeight_percent="0.14"
                     app:layout_constraintStart_toStartOf="@+id/contact"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintWidth_percent="0.14"
+                    app:layout_constraintWidth_percent="0.12"
                     app:srcCompat="@drawable/delivery" />
 
                 <TextView
                     android:id="@+id/eu"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:fontFamily="@font/rubik"
                     android:text="EU SHIPPING"
-                    android:textSize="15sp"
+                    android:textSize="13.5sp"
                     app:layout_constraintBottom_toBottomOf="@+id/delivery"
                     app:layout_constraintHeight_percent="0.09"
                     app:layout_constraintStart_toStartOf="@+id/textView3"
-                    app:layout_constraintTop_toTopOf="@+id/delivery"
-                    app:layout_constraintVertical_bias="0.619"
-                    app:layout_constraintWidth_percent="0.4" />
+                    app:layout_constraintTop_toTopOf="@+id/delivery" />
 
                 <TextView
                     android:id="@+id/textView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="12dp"
-                    android:layout_marginLeft="12dp"
                     android:fontFamily="@font/rubik"
                     android:text="Contact. \nSneakers.alert@outlook.com"
-                    android:textSize="15sp"
+                    android:textSize="13.5sp"
                     app:layout_constraintBottom_toBottomOf="@+id/contact"
                     app:layout_constraintStart_toEndOf="@+id/contact"
                     app:layout_constraintTop_toTopOf="@+id/contact" />
@@ -125,7 +122,7 @@
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="68dp"
+                    android:layout_marginTop="64dp"
                     app:layout_constraintHeight_percent="0.2"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/contact"
