--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -47,6 +47,19 @@
                 android:background="#292C2F"
                 android:backgroundTint="@color/alert">
 
+                <ImageView
+                    android:id="@+id/logout"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:tintMode="src_over"
+                    android:visibility="invisible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="@+id/shop"
+                    app:layout_constraintHeight_percent="0.35"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintWidth_percent="0.15"
+                    app:srcCompat="@drawable/logout_black_24dp" />
+
                 <TextView
                     android:id="@+id/text_login"
                     android:layout_width="wrap_content"
