--- a/app/src/main/res/layout/fragment_airmax1.xml
+++ b/app/src/main/res/layout/fragment_airmax1.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginRight="20dp"
+            android:spinnerMode="dropdown"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
