--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,6 +5,8 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
+    android:backgroundTint="#FFFFFF"
     android:paddingLeft="5dp"
     android:paddingRight="10dp"
     android:paddingBottom="@dimen/fragment_vertical_margin"
@@ -15,7 +17,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp"
         android:fontFamily="@font/lato"
         android:text="SIGN UP"
         android:textColor="#000000"
@@ -52,9 +53,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginRight="32dp"
         android:fontFamily="@font/lato"
         android:inputType="textEmailAddress"
         android:singleLine="true"
@@ -68,38 +67,20 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:layout_marginLeft="10dp"
         android:imeActionLabel="@string/action_sign_in_short"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="@+id/mail"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintStart_toEndOf="@+id/logo_password"
         app:layout_constraintTop_toBottomOf="@+id/pass_text_login" />
 
 
-    <ProgressBar
-        android:id="@+id/loading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="64dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="64dp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/password"
-        app:layout_constraintStart_toStartOf="@+id/password"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
-
     <ImageView
-        android:id="@+id/imageView4"
+        android:id="@+id/logo_password"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
         android:src="@drawable/pass"
         app:layout_constraintBottom_toBottomOf="@+id/password"
         app:layout_constraintStart_toStartOf="parent"
@@ -125,20 +106,18 @@
         android:layout_width="25dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
+        android:background="#00000000"
         app:layout_constraintBottom_toBottomOf="@+id/mail"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/mail"
         app:layout_constraintVertical_bias="0.64"
-        app:srcCompat="@drawable/ic_baseline_email_24"
-        tools:srcCompat="@drawable/email" />
+        app:srcCompat="@drawable/email" />
 
     <TextView
         android:id="@+id/dont"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
         android:layout_marginTop="20dp"
         android:text="DON’T HAVE AN ACCOUNT YET? "
 
@@ -169,7 +148,7 @@
         android:textSize="16sp"
         app:backgroundTint="#000000"
         app:layout_constraintEnd_toEndOf="@+id/password"
-        app:layout_constraintStart_toStartOf="@+id/imageView4"
+        app:layout_constraintStart_toStartOf="@+id/logo_password"
         app:layout_constraintTop_toBottomOf="@+id/password" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
