--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -50,7 +50,7 @@
     </fragment>
     <fragment
         android:id="@+id/nav_wishlist"
-        android:name="com.example.sneakersalert.WishlistFragment"
+        android:name="com.example.sneakersalert.ui.wishlist.WishlistFragment"
         tools:layout="@layout/fragment_wishlist">
         <action
             android:id="@+id/action_nav_wishlist_to_nav_sneakers"
@@ -174,6 +174,21 @@
         android:name="com.example.sneakersalert.ui.account.FillAddress"
         android:label="fragment_fill_address"
         tools:layout="@layout/fragment_fill_address" />
+    <fragment
+        android:id="@+id/nav_fillInvoice"
+        android:name="com.example.sneakersalert.ui.account.FillInvoiceAddress"
+        android:label="fragment_fill_invoice_address"
+        tools:layout="@layout/fragment_fill_invoice_address" />
+    <fragment
+        android:id="@+id/nav_request"
+        android:name="com.example.sneakersalert.ui.request.RequestSneakerFragment"
+        android:label="fragment_request_sneaker"
+        tools:layout="@layout/fragment_request_sneaker" />
+    <fragment
+        android:id="@+id/nav_payment"
+        android:name="com.example.sneakersalert.ui.payment.PaymentMethodFragment"
+        android:label="fragment_payment_method"
+        tools:layout="@layout/fragment_payment_method" />
 
 
 </navigation>
