--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,6 +4,7 @@
         <item>@font/abeezee</item>
         <item>@font/lato</item>
         <item>@font/lato_bold</item>
+        <item>@font/lato_thin</item>
         <item>@font/rubik</item>
         <item>@font/rubik_medium</item>
 
