--- a/app/src/main/res/values/spinner_list.xml
+++ b/app/src/main/res/values/spinner_list.xml
@@ -11,4 +11,17 @@
         <item>Price: Low to High</item>
 
     </string-array>
+    <string-array name="sizes_array">
+        <item>36</item>
+        <item>37</item>
+        <item>38</item>
+        <item>39</item>
+        <item>40</item>
+        <item>41</item>
+        <item>42</item>
+        <item>43</item>
+        <item>44</item>
+        <item>45</item>
+
+    </string-array>
 </resources>
